--- a/tims-quote-generator/styles.css
+++ b/tims-quote-generator/styles.css
@@ -4,17 +4,21 @@ body {
   max-width: 500px;
   margin: 2em auto;
   font: 1em/1.3 'Josefin Sans', sans-serif;
+  margin-top: 4em;
 }
 
 h1 {
   line-height: 0;
-  margin-bottom: 1em;
+  margin-bottom: .85em;
 }
 
 button {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  margin: 0; /* 2 */
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  margin: 0;
+  /* 2 */
   padding: 0;
   border: none;
   outline: none;
@@ -27,7 +31,8 @@ button {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -37,9 +42,10 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
-  }
+}
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
@@ -57,8 +63,8 @@ button,
   width: auto;
 }
 
-.quote-gen-container > div {
-/* nothing required yet */
+.quote-gen-container>div {
+  /* margin-top: 1em; */
 }
 
 .quote-gen-container {
@@ -71,10 +77,11 @@ button,
 }
 
 #quoteDisplay {
-margin-left: 1em;
+  margin-left: 1em;
 }
 
 /* Buzz Out */
+
 @-webkit-keyframes hvr-buzz-out {
   10% {
     -webkit-transform: translateX(3px) rotate(2deg);
@@ -117,6 +124,7 @@ margin-left: 1em;
     transform: translateX(-1px) rotate(0);
   }
 }
+
 @keyframes hvr-buzz-out {
   10% {
     -webkit-transform: translateX(3px) rotate(2deg);
@@ -159,6 +167,7 @@ margin-left: 1em;
     transform: translateX(-1px) rotate(0);
   }
 }
+
 .hvr-buzz-out {
   display: inline-block;
   vertical-align: middle;
@@ -166,7 +175,10 @@ margin-left: 1em;
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
-.hvr-buzz-out:hover, .hvr-buzz-out:focus, .hvr-buzz-out:active {
+
+.hvr-buzz-out:hover,
+.hvr-buzz-out:focus,
+.hvr-buzz-out:active {
   -webkit-animation-name: hvr-buzz-out;
   animation-name: hvr-buzz-out;
   -webkit-animation-duration: 0.75s;
